0171: Getting down to the final steps for chipIgnite

--- a/0171-2023-11-03.md
+++ b/0171-2023-11-03.md
@@ -4,4 +4,117 @@
 |-|-|
 | [**0170**-2023-10-31.md](./0170-2023-10-31.md) | *Next journal TBA* |
 
-# Final steps for chipIgnite
+# Getting down to the final steps for chipIgnite
+
+# Anton's checks of Pawel's repo and hardening
+
+I've gone thru [caravel-sky130-opamp-cascode@raybox_and_mixed](https://github.com/embelon/caravel-sky130-opamp-cascode/tree/raybox_and_mixed) as best I can.
+
+I think my UPW snippet, user_defines, GDS/LEF/DEF, netlist, etc. are all correct in Pawel's repo, for the current version of my design.
+
+I only have the following observations:
+
+1.  I've done a [PR to change user_defines for reserved SoC pads](https://github.com/embelon/caravel-sky130-opamp-cascode/pull/1). Waiting on approval from Ellen and Pawel.
+2.  Ellen should just check, re user_defines: Do you actually intend to [make your PWM pins bidirectional and *also under MGMT control instead of USER design* by default](https://github.com/embelon/caravel-sky130-opamp-cascode/blob/d1d74e1ac4fedd3f56e86329bf6809208481407f/verilog/rtl/user_defines.v#L80-L82)? This is probably fine (and easily changed by firmware as required), but thought I'd check.
+3.  `analog_io[4]` is not connected, neither is its corresponding digital[11]. Likewise, there is no `io_oeb[11]`. Is this intentional? It was flagged as `bandgap` by Ellen originally.
+4.  Ellen's `top_mixed` has a port for `wb_sel_i`, but from what I can tell there are no pins for this in the GDS. I'm guessing this is not actually used by Ellen's design? I discovered this because I looked in `runs/*/logs/floorplan/3-initial_fp.log` and saw this warning:
+    ```
+    [WARNING STA-0201] /home/.../caravel-sky130-opamp-cascode/openlane/user_project_wrapper/runs/23_11_02_11_42/results/synthesis/user_project_wrapper.v line 268, instance top_mixed port wbs_sel_i not found.
+    ```
+    This shows up also in `runs/*/logs/signoff/29-user_project_wrapper.lef.lvs.log`:
+    ```
+    Cell user_project_wrapper (0) disconnected node: wbs_sel_i[0]
+    Cell user_project_wrapper (0) disconnected node: wbs_sel_i[1]
+    Cell user_project_wrapper (0) disconnected node: wbs_sel_i[2]
+    Cell user_project_wrapper (0) disconnected node: wbs_sel_i[3]
+    ```
+5.  Looking at the final UPW (user_project_wrapper) GDS, there doesn't seem to really be anything in the analog region of Ellen's design, but maybe that's more private and going to be dropped in later?
+6.  config.json: I have no idea if this matters, but the main [user_project_wrapper config.json sets CLOCK_NET](https://github.com/embelon/caravel-sky130-opamp-cascode/blob/d1d74e1ac4fedd3f56e86329bf6809208481407f/openlane/user_project_wrapper/config.json#L10C19-L10C32) to `top_mixed.clk`, but that's not the name of the net...? I think it's `top_mixed.wb_clock_i`?
+7.  config.json: [top_mixed PDN uses `vccd1 vssd1`](https://github.com/embelon/caravel-sky130-opamp-cascode/blob/d1d74e1ac4fedd3f56e86329bf6809208481407f/openlane/user_project_wrapper/config.json#L13) where [Pawel's opamp uses `VCC VSS`](https://github.com/embelon/caravel-sky130-opamp-cascode/blob/d1d74e1ac4fedd3f56e86329bf6809208481407f/openlane/user_project_wrapper/config.json#L15) - Is that correct?
+8.  config.json: [VERILOG_FILES_BLACKBOX is using some files from `gl/` and others from `rtl/`](https://github.com/embelon/caravel-sky130-opamp-cascode/blob/d1d74e1ac4fedd3f56e86329bf6809208481407f/openlane/user_project_wrapper/config.json#L19-L24) - I assume this is OK? The copy of my `gl/top_ew_algofoogle.v` port list in Pawel's repo looks correct anyway.
+9.  config.json: Ellen's design is [not featured in EXTRA_LIBS and EXTRA_SPEFS](https://github.com/embelon/caravel-sky130-opamp-cascode/blob/d1d74e1ac4fedd3f56e86329bf6809208481407f/openlane/user_project_wrapper/config.json#L37-L45) - Is that OK?
+10. UPW's [metrics.csv](https://raw.githubusercontent.com/embelon/caravel-sky130-opamp-cascode/raybox_and_mixed/signoff/user_project_wrapper/metrics.csv) reports antenna violations:
+    ```
+    pin_antenna_violations  73
+    net_antenna_violations  72
+    ```
+    I think these are all listed in `runs/*/logs/signoff/31-arc.log` and `runs/*/reports/signoff/31-antenna_violators.rpt`
+
+5.  Tests in [verilog/dv/rbz_basic](https://github.com/embelon/caravel-sky130-opamp-cascode/tree/raybox_and_mixed/verilog/dv/rbz_basic) are old versions (i.e. without shared inputs), but I don't suppose this matters. If the latest versions are needed, they are [here](https://github.com/algofoogle/raybox-zero-caravel/tree/ew/verilog/dv/rbz_basic)
+
+
+
+
+
+# Anton's rough notes of the things he checked (more just for his own record)
+
+*   [Firmware samples for Matt to test PLL behaviour](https://discord.com/channels/778248761054986292/863022759428751360/1169751449534738433):
+    >   Here's one that I think will do the trick: https://github.com/algofoogle/raybox-zero-caravel/blob/ew/verilog/dv/blink_pll/blink_pll.c
+    >   
+    >   From reset, this should blink the GPIO 4 times quickly, then 4 times slowly, then change the PLL, and hopefully then just keep blinking forever slowly. I don't know what delay value to put in for `w = ...` on lines 19, 26, and 40 (depends on your input clock speed I guess) but for 25MHz these are probably good for seeing the result visually :slight_smile:
+    >   
+    >   If you wouldn't mind trying to run that, and reset a few times to make sure it is consistent, that will be very helpful! 
+    >   
+    >   Then there is one more variation, and that is to replace lines 34..37 with this, and again try a few resets to see if it gives consistent results:
+    >   ```c
+    >   reg_hkspi_pll_ena = 1;
+    >   reg_hkspi_pll_source = 0b00001111;
+    >   reg_hkspi_pll_bypass = 0;
+    >   ```
+    >   
+    >   From simulation, that latter example is more likely to lock up the PLL, because it seems to glitch the core clock.
+    **Matt has confirmed:** On his chip, both variants blink the GPIO as expected, and they do NOT lock up the SoC and show consistent behaviour after a few resets.
+*   Checked out [my fork](https://github.com/algofoogle/caravel-sky130-opamp-cascode/tree/raybox_and_mixed) of [caravel-sky130-opamp-cascode@raybox_and_mixed](https://github.com/embelon/caravel-sky130-opamp-cascode/tree/raybox_and_mixed), switched to `raybox_and_mixed` branch, and checked the following:
+    *   Essential files:
+        ```
+        $ md5sum gds/top_ew_algofoogle.gds lef/top_ew_algofoogle.lef def/top_ew_algofoogle.def verilog/gl/top_ew_algofoogle.nl.v verilog/gl/top_ew_algofoogle.v 
+        fe073a8249e71319f22894dfc87e63f8  gds/top_ew_algofoogle.gds
+        25c250c94a75450116426b603ee892d9  lef/top_ew_algofoogle.lef
+        f5bc8e16b5becc9a7e22aae3a40a0f2d  def/top_ew_algofoogle.def
+        7240d85e21422be6080e7d13576ea19d  verilog/gl/top_ew_algofoogle.nl.v
+        9d402165073e8a563e661ae8bb205be3  verilog/gl/top_ew_algofoogle.v
+        ```
+        These match all the latest files in my own repo.
+    *   SNIPPET2_ShareIns.v snippet [in user_project_wrapper](https://github.com/embelon/caravel-sky130-opamp-cascode/blob/d1d74e1ac4fedd3f56e86329bf6809208481407f/verilog/rtl/user_project_wrapper.v#L165-L255) seems to match [my latest version](https://github.com/algofoogle/raybox-zero/blob/11f14a8eea395e571ca5be0ddf9380b064d072ec/src/rtl/ew_caravel_snippets/SNIPPET2_ShareIns.v)
+    *   [user_defines.v](https://github.com/embelon/caravel-sky130-opamp-cascode/blob/raybox_and_mixed/verilog/rtl/user_defines.v):
+        *   Generally seems correct, other than my PR to change the SoC pins' defaults.
+        *   **Just get Ellen to check** that [putting the PWM pins under MGMT control by default](https://github.com/embelon/caravel-sky130-opamp-cascode/blob/d1d74e1ac4fedd3f56e86329bf6809208481407f/verilog/rtl/user_defines.v#L80-L82) is intended.
+    *   [includes.rtl.caravel_user_project](https://github.com/embelon/caravel-sky130-opamp-cascode/blob/raybox_and_mixed/verilog/includes/includes.rtl.caravel_user_project) does not include Anton's and Ellen's designs, but I think this is correct: This file is just to harden Pawel's own macro.
+    *   user_project_wrapper.v:
+        *   Check:
+            *   Pin assignments: No gaps or overlaps?
+            *   OEBs and I-vs-O directions seem sensible?
+        *   Findings:
+            *   Generally all appears fine to me, except...
+            *   **analog_io[4] is not connected, and neither is its corresponding digital pin (io[11]).**
+    *   Compare top_ew_algofoogle.v:
+        *   Pawel's blackboxed version matches my own source version.
+    *   I'm not sure what's meant to be in `uprj_netlists.v` -- I haven't used it before, and a year ago there was talk of it having become irrelevant (i.e. because the `includes` now replace it?)
+    *   Tests in [verilog/dv/rbz_basic](https://github.com/embelon/caravel-sky130-opamp-cascode/tree/raybox_and_mixed/verilog/dv/rbz_basic) are old versions (i.e. without shared inputs), but I don't suppose this matters. If the latest versions are needed, they are [here](https://github.com/algofoogle/raybox-zero-caravel/tree/ew/verilog/dv/rbz_basic)
+    *   Check [config.json for UPW](https://github.com/embelon/caravel-sky130-opamp-cascode/blob/raybox_and_mixed/openlane/user_project_wrapper/config.json)
+    *   I have no idea if this matters, but the main [user_project_wrapper config.json sets CLOCK_NET to top_mixed.clk](https://github.com/embelon/caravel-sky130-opamp-cascode/blob/d1d74e1ac4fedd3f56e86329bf6809208481407f/openlane/user_project_wrapper/config.json#L10C19-L10C32), but that's not the name of the net...? I think it's `top_mixed.wb_clock_i`?
+        *   [top_mixed PDN uses `vccd1 and vssd1`](https://github.com/embelon/caravel-sky130-opamp-cascode/blob/d1d74e1ac4fedd3f56e86329bf6809208481407f/openlane/user_project_wrapper/config.json#L13) where [Pawel's opamp uses VCC and VSS](https://github.com/embelon/caravel-sky130-opamp-cascode/blob/d1d74e1ac4fedd3f56e86329bf6809208481407f/openlane/user_project_wrapper/config.json#L15) - Is that correct?
+        *   [VERILOG_FILES_BLACKBOX is using some files from `gl/` and others from `rtl/`](https://github.com/embelon/caravel-sky130-opamp-cascode/blob/d1d74e1ac4fedd3f56e86329bf6809208481407f/openlane/user_project_wrapper/config.json#L19-L24) - I assume this is OK? My `gl/top_ew_algofoogle.v` port list looks correct in the repo anyway.
+        *   Ellen's design is [not featured in EXTRA_LIBS and EXTRA_SPEFS](https://github.com/embelon/caravel-sky130-opamp-cascode/blob/d1d74e1ac4fedd3f56e86329bf6809208481407f/openlane/user_project_wrapper/config.json#L37-L45) - Is that OK?
+    *   Review harden reports (fanout/cap/slew, antennas and pre-check)
+*   [metrics.csv](https://raw.githubusercontent.com/embelon/caravel-sky130-opamp-cascode/raybox_and_mixed/signoff/user_project_wrapper/metrics.csv) reports antenna violations:
+    ```
+    pin_antenna_violations  73
+    net_antenna_violations  72
+    ```
+
+# TODO
+
+*   Feed back wb_clk_i out of gpout ('alts')?
+*   Consider using spare Ellen input (35) as clock source instead of user_clock2
+*   Try to document actual PLL registers. What do the 'sel' registers actually do?? Add in clocking diagrams, and copies of simulation behaviour
+*   Help Ellen with weird bus index numbering issues?
+
+# Extra VM steps
+
+```bash
+sudo apt install renameutils # installs qmv for doing bulk renames via text editor
+select-editor
+ehco 'export EDITOR=/usr/bin/vim' >> ~/.bashrc
+. ~/.bashrc
+```
