Minor update to 0168

--- a/0168-2023-10-28.md
+++ b/0168-2023-10-28.md
@@ -33,6 +33,13 @@ Z2A MPW9 update refers to OpenLane improved checks inc. for OEB and CVC: "preche
 
 *   Probably need extra power nets? In UPW as well as config.tcl
 
+# Next steps
+
+*   Change LZC to reg case method, test on FPGA
+*   LZC test feature
+*   Distance limit (<1/32)
+*   Option to disable outer walls
+
 # Notes
 
 *   LEF files can be viewed in KLayout. They basically just seem to show main area, obstructions (keepouts) per layer, pins per layer, and labels:
