--- a/0173-2023-11-18.md
+++ b/0173-2023-11-18.md
@@ -2,7 +2,7 @@
 
 | Previous journal: | Next journal: |
 |-|-|
-| [**0172**-2023-11-04.md](./0172-2023-11-04.md) | *Next journal TBA* |
+| [**0172**-2023-11-04.md](./0172-2023-11-04.md) | [**0174**-2023-11-19.md](./0174-2023-11-19.md) |
 
 # Starting sky130A analog ASIC design: Setting up xschem
 
@@ -78,8 +78,7 @@ Ref: https://youtu.be/KgBLByOkJxA?t=312
 
 # Next steps
 
-*   Stefan's Jan 2023 video "[Analog simulation with xschem and the skywater 130nm Process Development Kit (PDK)
-](https://www.youtube.com/watch?v=bYbkz8FXnsQ)"
+*   Stefan's Jan 2023 video "[Analog simulation with xschem and the skywater 130nm Process Development Kit (PDK)](https://www.youtube.com/watch?v=bYbkz8FXnsQ)"
 *   Efabless [Webinar - Analog schematic capture & simulation with Stefan Schippers](https://www.youtube.com/watch?v=q3ZcpSkVVuc) -- this might include the design from the video above?
 *   Efabless [Analog layout using Magic and Klayout with Tim Edwards and Thomas Parry](https://www.youtube.com/watch?v=CSZm3q4rUBg) -- builds on the design above?
 *   Efabless [Analog layout of an op-amp using the Magic VLSI tool](https://www.youtube.com/watch?v=XvBpqKwzrFY&t=4874s) -- might be the longer recording of the same 'Analog layout' video above?
