--- a/0173-2023-11-18.md
+++ b/0173-2023-11-18.md
@@ -11,26 +11,19 @@
 Guide: https://xschem.sourceforge.io/stefan/xschem_man/install_xschem.html
 
 1.  Starting with MPW8 VM. Xschem not already installed.
-2.  ```bash
-    cd ~/asic_tools
-    git clone https://github.com/StefanSchippers/xschem.git xschem-src
-    cd xschem-src; ./configure
-    ```
-    **FAILS** at:
-    ```
-    Checking for awk... OK (awk)
-    Checking for xpm... not found
-    Node libs/gui/xpm/* is required but provided detection callback fails to find that feature on that system.
-    Aborted (core dumped)
-    ```
-3.  Install prerequisites:
+2.  Install prerequisites:
     ```bash
     sudo apt install \
         libx11-6 libx11-dev libxrender1 libxrender-dev libxcb1 libx11-xcb-dev \
         libcairo2 libcairo2-dev tcl8.6 tcl8.6-dev tk8.6 tk8.6-dev flex bison \
-        libxpm4 libxpm-dev libjpeg-dev tcl-tclreadline
+        libxpm4 libxpm-dev libjpeg-dev tcl-tclreadline vim-gtk3 xterm
     ```
-4.  Try `./configure` again. Successfully ends with `Configuration complete, ready to compile.`
+3.  ```bash
+    cd ~/asic_tools
+    git clone https://github.com/StefanSchippers/xschem.git xschem-src
+    cd xschem-src; ./configure
+    ```
+    Successfully ends with `Configuration complete, ready to compile.`
 5.  Build and install:
     ```bash
     make
