--- a/0175-2023-11-20.md
+++ b/0175-2023-11-20.md
@@ -83,14 +83,101 @@ Did the install and xschem runs fine.
 # Progress
 
 *   Watched all of [Webinar - Analog schematic capture & simulation with Stefan Schippers](https://www.youtube.com/watch?v=q3ZcpSkVVuc)
-*   Created 
+*   Created [vga_res_div](https://github.com/algofoogle/sandpit/tree/master/vlsi/sky130-dac-example) for a planned sky130-dac-example.
+
+
+# Stuff to figure out
+
+*   If I design an inverter:
+    *   How should I size the pmos and nmos FETs?
+    *   Should I use the 4-pin variants, and if so what do we connect the base to?
+    *   How should I simulate/characterise them?
+    *   When doing the layout, what more do I need to know?
+
+
+
+# 01_inverter
+
+https://github.com/algofoogle/sandpit/tree/master/vlsi/01_inverter
+
+## Background:
+
+![](i/0175-1-home.png)
+
+Select test_inv. Then:
+
+![](i/0175-2-not.png)
+
+Select one of the `not` gates. Then:
+
+![](i/0175-3-fets.png)
+
+Observations:
+
+*   Standard 4-pin 1.8V FETs (i.e. with bias(?) B), `sky130_fd_pr/pfet_01v8.sym` and `sky130_fd_pr/nfet_01v8.sym`
+*   Biases connect to their respective polarities (i.e. for pfet, B is connected to VCC)
+*   pfet is twice the size of nfet
+*   Sizes (L and W) are set by parameters:
+
+    ![](i/0175-4-nfet-params.png)
+
+    These are set in the hierarchical instantiation of the symbol:
+
+    ![](i/0175-5-fet-symbol-params.png)
+
+Notes:
+
+*   A is ipin, Y is opin
+*   VCC and VSS are lab_pin with std_logic removed
+*   Manually set pfet L to 2
+*   Connect biases to their respective polarities
+
+## Results:
+
+Overall inverter design:
+
+![](i/0175-inverter-design.png)
+
+*   Actual inverter design is on the left. **Should it have VCC/VSS in it, with those names?**
+*   Dummy load and 10fF capacitance is in the middle, with V1 as a 0V dummy voltage source, specifically for measuring current on Y.
+*   NGSPICE code on the right, with sky130 TT corner.
+
+Graphed results:
+
+![](i/0175-inverter-graphs.png)
+
+*   Bottom graph shows voltages.
+*   At 1ns, power (VCC) is applied, while A is held low.
+*   At 2ns, A rises to 1.8V over 0.1ns, and Y switches near 2.2ns
+*   In upper graph, current spikes mostly relate to linear regions and capacitance (parasitics).
+
+
+
 
 
 # Next steps
 
+*   Watch Efabless [Analog layout using Magic and Klayout with Tim Edwards and Thomas Parry](https://www.youtube.com/watch?v=CSZm3q4rUBg) (builds on webinar video just watched).
+*   Try [Ryan Wans' SKY130 videos](https://www.youtube.com/@ryanwans391/videos)
+*   Watch bminch videos, e.g. [Xschem / Ngspice Resistive Voltage Divider VTC Monte Carlo Simulation Tutorial](https://www.youtube.com/watch?v=vXm7XV8Pf0M) (NOT sky130-specific?) and the other one on sky130 resistors. Maybe watch in this order:
+    *   [CMOS Inverter VTC and Transient Simulation Tutorial Using Xschem and Ngspice](https://www.youtube.com/watch?v=bm3l21ExLOY)
+    *   [Creating a Hierarchical Schematic in Xschem](https://www.youtube.com/watch?v=BpPP2hE_eK8)
+    *   [Layout-Driven Schematics](https://www.youtube.com/watch?v=HQYoIbvZivc)
+    *   [Creating a Hierarchical Layout in Magic Using the Sky130 PDK](https://www.youtube.com/watch?v=RPppaGdjbj0)
+    *   [Layout Versus Schematic Tutorial Using Netgen](https://www.youtube.com/watch?v=NCaNF4EunYU)
+    *   [Layout Versus Schematic Tutorial Using Netgen (Part 2)](https://www.youtube.com/watch?v=_xsZbaTBEEA)
+    *   [Magic / Xschem / Ngspice Postlayout Simulation Tutorial](https://www.youtube.com/watch?v=8SMBSYiLbHM)
+    *   [Xschem / Ngspice Tutorial Showing How to Prepare Your Installation for Monte Carlo Simulation](https://www.youtube.com/watch?v=fGxs2TnDgrU)
+    *   [Xschem / Ngspice Inverter VTC Monte Carlo Simulation Tutorial](https://www.youtube.com/watch?v=fXaXTALecr8)
+    *   [Xschem / Ngspice Resistive Voltage Divider VTC Monte Carlo Simulation Tutorial](https://www.youtube.com/watch?v=vXm7XV8Pf0M)
+    *   [Xschem / Ngspice R-2R Ladder DAC Transfer Characteristic Monte Carlo Simulation Tutorial](https://www.youtube.com/watch?v=n5A6tJR7i30)
+    *   [Survey of Simulated MOS Transistor Characteristics in the Sky130 PDK](https://www.youtube.com/watch?v=QrIG1fQEymc)
+    *   [Magic / Xschem Sky130 MIM Capacitor Layout Tutorial](https://www.youtube.com/watch?v=0mF6tU6Xf0Q)
+    *   [Magic / Xschem Sky130 P- Precision Poly Resistor Layout Tutorial](https://www.youtube.com/watch?v=ITel47kO-nA)
+*   Try designing a proper potentiometric DAC with transistors as taps. Use res_xhigh_po?
 *   Find out how to do Monte Carlo SPICE simulations (is it just a matter of using `tt_mm`?) and multiple simulation runs with varied parameters (e.g. temp). See [this](https://youtu.be/q3ZcpSkVVuc?t=2969) with more explanation [here](https://youtu.be/q3ZcpSkVVuc?t=3485)
 *   Consider using a vector for AOUT instead of AOUT0, 1, etc.
-*   Try Harald's guide to making custom standard cells.
+*   Try Harald's guide to making custom standard cells. Could we just have cells which represent each resistor, transistor, etc?
 
 
 # Notes
