Old notes updated in 0172

--- a/0172-2023-11-04.md
+++ b/0172-2023-11-04.md
@@ -50,7 +50,37 @@ Note to Pawel to bring in new version:
 *   tests
 *   GDS/LEF, etc
 *   updated snippet
+*   user_defines:
+    *   Change [this](https://github.com/embelon/Silicon_Contact_3GBT/blob/7796e37b1a1b01b87f5f8f0c955dc4a21bea170d/verilog/rtl/user_defines.v#L62):
+        ```verilog
+        `define USER_CONFIG_GPIO_11_INIT `GPIO_MODE_USER_STD_ANALOG         // Ellen: bandgap (analog[4])
+        ```
+    *   To this:
+        ```verilog
+        `define USER_CONFIG_GPIO_11_INIT `GPIO_MODE_USER_STD_INPUT_NOPULL   // Anton: anton_clock_in
+        ```
         
+
+Howdy Pawel, I've updated my design. Ellen has assigned me an extra pin (DIGITAL[11]), and I've followed her suggestion to make it my main clock source.
+
+For this, `user_defines` will need to be updated to change this pin from ANALOG to INPUT_NOPULL, i.e. change this:
+```verilog
+`define USER_CONFIG_GPIO_11_INIT `GPIO_MODE_USER_STD_ANALOG         // Ellen: bandgap (analog[4])
+```
+To this:
+```verilog
+`define USER_CONFIG_GPIO_11_INIT `GPIO_MODE_USER_STD_INPUT_NOPULL   // Anton: anton_clock_in
+```
+
+I've got an updated snippet too, in the usual place: https://github.com/algofoogle/raybox-zero/blob/ew/src/rtl/ew_caravel_snippets/SNIPPET2_ShareIns.v
+
+A couple of top_ew_algofoogle ports have also changed: https://github.com/algofoogle/raybox-zero/blob/ew/src/rtl/top_ew_algofoogle.v
+
+All the other files, as usual, can be found in my caravel repo: https://github.com/algofoogle/raybox-zero-caravel
+
+
+
+
 NOTE: New EW combined submission repo: https://github.com/embelon/Silicon_Contact_3GBT
 
 # Next steps
