0177: GFMPW-1 test (gf180mcu)

--- a/0177-2023-11-27.md
+++ b/0177-2023-11-27.md
@@ -10,3 +10,113 @@ See: https://efabless.com/gf-180-open-mpw-shuttle-program
 
 I will try this with my old solo_squash rpeo.
 
+1.  On MPW9 VM...
+
+    ```bash
+    cd ~/anton
+    git clone git@github.com:algofoogle/solo_squash
+    cd solo_squash
+    ```
+
+    NOTE: Just use `main` branch on this repo (others went nowhere, besides maybe `rtl-test-gpio-defaults`). Note also that tt03p5 and tt04 versions had their own *copies* of the code, not git submodules, so beware that the source might differ.
+    There are no real code differences between tt03p5 and tt04 versions.
+
+    Source in tt03p5 version is slightly better than HEAD of solo_squash, so I'll copy in tt03p5's `solo_squash.v`.
+2.  Do Verilator sim test:
+    ```bash
+    sudo apt-get update
+    sudo apt install libsdl2-dev libsdl2-ttf-dev
+    make sim_random
+    ```
+3.  Create CUP:
+    ```bash
+    cd ~/anton
+    git clone -b gfmpw-1c https://github.com/efabless/caravel_user_project.git solo-squash-caravel-v2
+    cd solo-squash-caravel-v2
+    git switch -c main-gfmpw1
+    ```
+4.  Create my GH repo [solo-squash-caravel-v2] then use that as remote "`anton`":
+    ```bash
+    git remote add anton git@github.com:algofoogle/solo-squash-caravel-v2.git
+    git push -u anton main-gfmpw1
+    #NOTE: Expect warnings about mag/user_project_wrapper.mag ewxceeding 50MB.
+    ```
+    In GH, default branch for the repo should already be `main-gfmpw1`, as this is the only one we pushed to the `anton` remote.
+5.  Do test harden for example project:
+    ```bash
+    make user_proj_example
+    ```
+    Fails with:
+    ```
+    [INFO]: Using configuration in '../home/zerotoasic/anton/solo-squash-caravel-v2/openlane/user_proj_example/config.json'...
+    [INFO]: PDK Root: /home/zerotoasic/asic_tools/pdk
+    [INFO]: Process Design Kit: gf180mcuD
+    [ERROR]: Standard Cell Library 'gf180mcu_fd_sc_mcu7t5v0' not found in PDK.
+    ```
+6.  Fix up PDK stuff. Before doing that, let's snapshot the MPW9 VM. I could use [Uri's simple advice](https://discord.com/channels/1009193568256135208/1045622178332291102/1176995613171265586) to just do `volare ls-remote --pdk gf180mcu` (so long as we have `volare` runnable per Python .venv), and if more info is needed we could've checked out how Matt set up MPW9 per the GHA build script or even just Z2A part 0 manual install. In any case, I'll instead try to use https://github.com/efabless/caravel_user_project/blob/gfmpw-1c/docs/source/index.rst as my guide...
+7.  ```bash
+    #NOTE: Already set:
+    # OPENLANE_ROOT=/home/zerotoasic/asic_tools/openlane
+    # PDK_ROOT=/home/zerotoasic/asic_tools/pdk
+    export PDK=gf180mcuD
+    make setup
+    ```
+    Oh dear, this wrecks my `~/CUP`... I guess because of one or more of these env vars:
+    ```env
+    CORE_VERILOG_PATH=/home/zerotoasic/asic_tools/caravel_user_project/mgmt_core_wrapper/verilog
+    MGMT_AREA_ROOT=/home/zerotoasic/asic_tools/caravel_user_project/mgmt_core_wrapper
+    MCW_ROOT=/home/zerotoasic/asic_tools/caravel_user_project/mgmt_core_wrapper
+    DESIGNS=/home/zerotoasic/asic_tools/caravel_user_project
+    TARGET_PATH=/home/zerotoasic/asic_tools/caravel_user_project
+    CARAVEL_ROOT=/home/zerotoasic/asic_tools/caravel_user_project/caravel
+    ```
+    These appear to be set near the bottom of `~/.bashrc`. I decided to stop this, and restore the VM snapshot.
+8.  To keep things simple, let's just replace asic_tools/caravel_user_project with our new repo, and see what happens.
+    ```bash
+    cd ~/asic_tools
+    rm caravel_user_project # My existing version is a symlink so this is easy to remove.
+    ln -s ../anton/solo-squash-caravel-v2 caravel_user_project
+    ```
+9.  Try again...
+    ```bash
+    cd ~/CUP
+    export PDK=gf180mcuD
+    make setup
+    ```
+    Observations, seemingly all within `~/CUP` unless otherwise noted:
+    *   There is nothing in `verilog/dv`
+    *   Deleted `caravel` subdir to replace it with a new gfmpw-1c clone from https://github.com/efabless/caravel-gf180mcu
+    *   Using caravel's Makefile, runs `check-env` and `install_mcw`
+    *   Deletes `mgmt_core_wrapper` and replaces with `mcw-litex-vexriscv`
+    *   Deletes `~/asic_tools/openlane` and grabs tag 2023.10.16 -- can't remember what version WAS in there. Docker pulls in its images.
+    *   Run's caravel's `make pdk-with-volare`. This does `python3 -m pip install --upgrade volare` but without venv?
+    *   Downloads PDK:
+        ```
+        Downloading common.tar.zst… 
+        Downloading gf180mcu_fd_io.tar.zst… 
+        Downloading gf180mcu_fd_ip_sram.tar.zst… 
+        Downloading gf180mcu_fd_pr.tar.zst… 
+        Downloading gf180mcu_fd_sc_mcu7t5v0.tar.zst… 
+        Downloading gf180mcu_fd_sc_mcu9t5v0.tar.zst… 
+        ```
+    *   Replaces `mpw_precheck` (more Docker images)
+    *   Approx 13GB of disk space used up
+
+
+[solo-squash-caravel-v2]: https://github.com/algofoogle/solo-squash-caravel-v2
+
+# Stuff to try out using solo_squash design
+
+*   un/registered outputs
+*   reset source?
+*   muxing
+
+# Overall projects for possible combined GFMPW-1
+
+*   vga_spi_rom
+*   solo_squash
+*   raybox-zero
+*   raybox-zero upgraded (speed-safer. more IO use)
+*   simple analog test
+*   ring osc and other directly instantiated cell chains
+
