Lots of updates to 0177

--- a/0177-2023-11-27.md
+++ b/0177-2023-11-27.md
@@ -101,21 +101,122 @@ I will try this with my old solo_squash rpeo.
         ```
     *   Replaces `mpw_precheck` (more Docker images)
     *   Approx 13GB of disk space used up
-
+10. Try hardening user_proj_example again with `make user_proj_example`. Observations:
+    *   ```log
+        [WARNING]: OpenLane may not function properly: open_pdks e0f692f46654d6c7c99fc70a0c94a080dab53571
+        The version of open_pdks used in building the PDK does not match the version OpenLane was tested on (installed: e0f692f46654d6c7c99fc70a0c94a080dab53571, tested: dd7771c384ed36b91a25e9f8b314355fc26561be)
+        This may introduce some issues. You may want to re-install the PDK by invoking `make pdk`.
+        ```
+    *   ```log
+        [WARNING]: DIODE_INSERTION_STRATEGY is now deprecated; use GRT_REPAIR_ANTENNAS, DIODE_ON_PORTS and RUN_HEURISTIC_DIODE_INSERTION instead.
+        [INFO]: DIODE_INSERTION_STRATEGY set to 4. Setting RUN_HEURISTIC_DIODE_INSERTION to 1
+        [INFO]: DIODE_INSERTION_STRATEGY set to 4. Setting DIODE_ON_PORTS to in
+        ```
+    *   ```log
+        [INFO]: 0 errors found by linter
+        [WARNING]: 8 warnings found by linter
+        ```
+    *   ```log
+        [WARNING]: There are max fanout violations in the design at the Typical corner. Please refer to '../home/zerotoasic/anton/solo-squash-caravel-v2/openlane/user_proj_example/runs/23_11_27_12_32/reports/signoff/34-sta-rcx_nom/multi_corner_sta.checks.rpt'.
+        [INFO]: There are no hold violations in the design at the Typical corner.
+        [INFO]: There are no setup violations in the design at the Typical corner.
+        [SUCCESS]: Flow complete.
+        ```
+    *   44 steps in total, taking 06:21
+11. Checking `reports/signoff/34-sta-rcx_nom/multi_corner_sta.checks.rpt` the fanouts aren't great (22/4 worst, 9/4 avg, 38 fanouts total). In `reports/signoff/44-antenna_violators.rpt` there is also one wire that is 2.23x
+12. `summary.py --caravel --design user_proj_example --full-summary` -- somewhat different from sky130, but nothing I'm really worried out. Big DIEAREA of 19.712mm&sup2; though! That can't be right (unless it's counting full chip area inc. padframe) because the configured DIEAREA is only 2.8mmx1.75mm I think (~5mm&sup2;):
+    ![](i/0177-user_proj_example.png)
+13. Now try `make user_project_wrapper`. Only 30 steps this time. Took 05:20. Also gave fanout violations, but they're `/10` and not as severe...?
+    ![](i/0177-user_project_wrapper.png)
 
 [solo-squash-caravel-v2]: https://github.com/algofoogle/solo-squash-caravel-v2
 
+# Adding solo_squash repo as a submodule
+
+1.  Fix up repo (inc. removing old example stuff):
+    ```bash
+    git rm -rf gds/* mag/* maglef/* sdc/user_proj_example.sdc signoff/user_proj_example
+    mkdir gds mag maglef
+    touch gds/.keep mag/.keep maglef/.keep
+    git add gds mag maglef
+    cat <<EOH >>.gitignore
+    caravel
+    dependencies
+    mgmt_core_wrapper
+    EOH
+    git commit -am "Remove old example stuff"
+    git push
+    ```
+    NOTE: Not sure what to do with `sdf/`.
+2.  Add solo_squash repo as submodule:
+    ```bash
+    cd ~/CUP/verilog/rtl
+    git submodule add https://github.com/algofoogle/solo_squash solo_squash
+    ```
+3.  ABORT...
+
+I got a successful harden after a few steps...
+
+![solo_squash macro at 35% util](i/0177-solo_squash-35p.png)
+
+...but mucked up the repo a bit, so I'm redoing it, with steps recorded here.
+
+1.  I cloned solo-squash-caravel-v2 again and then [deleted](https://github.com/algofoogle/solo-squash-caravel-v2/commit/1dffff9f592ea10d4582e72ec770ff14f0d640af) [more](https://github.com/algofoogle/solo-squash-caravel-v2/commit/4904dd281556bd61c39e055145a15f9208fb5dfc) [stuff](https://github.com/algofoogle/solo-squash-caravel-v2/commit/246f7e85d55192188971c78703bd00f0fc015490).
+2.  Then...
+    ```bash
+    git submodule add git@github.com:algofoogle/solo_squash verilog/rtl/solo_squash
+    ```
+3.  In solo_squash submodule, commented out the timescale in src/solo_squash.v (and committed that).
+4.  Edit each of `verilog/includes/*` to replace user_proj_example with solo_squash_caravel_gf180, and also include `-v $(USER_PROJECT_VERILOG)/rtl/solo_squash/src/solo_squash.v` in `includes.rtl.caravel_user_project`
+5.  Create `verilog/rtl/solo_squash_caravel_gf180.v` that will be our top *macro* and which wraps `solo_squash game`
+6.  Update `verilog/rtl/user_defines.v`
+7.  Replace `verilog/rtl/user_project_wrapper.v` to instantiate `solo_squash_caravel_gf180`
+8.  Create `openlane/solo_squash_caravel_gf180/config.json` and, if desired, `pin_order.cfg` (and reference it in `config.json`)
+9.  Edit `openlane/user_project_wrapper/config.json` and `macro.cfg`
+10. Update `README.md`
+11. Run `make setup`
+
+# Hardening
+
+If cloning the repo anew, remember to do `git submodule init` and `git submodule update`.
+
+Harden the main design:
+
+```bash
+make solo_squash_caravel_gf180
+```
+
+![](i/0177-redo-project-harden.png)
+
+I got fanout warnings. Oh well, let's move on.
+
+Now harden UPW with the macro included:
+
+```bash
+make user_project_wrapper
+```
+
+![](i/0177-redo-upw-harden.png)
+
+There are slew *and* fanout warnings in this one. Still, it completed.
+
+
 # Stuff to try out using solo_squash design
 
+*   Compare solo_squash_caravel.v to TT03p5 wrapper
 *   un/registered outputs
 *   reset source?
 *   muxing
+*   **NOTE:** Need to have simulation testbench!
+*   **NOTE:** Might need to make my own SDC files, esp. to replace `user_project_wrapper.sdc`!
 
 # Overall projects for possible combined GFMPW-1
 
 *   vga_spi_rom
 *   solo_squash
 *   raybox-zero
+*   lzc_fast
+*   reciprocal
 *   raybox-zero upgraded (speed-safer. more IO use)
 *   simple analog test
 *   ring osc and other directly instantiated cell chains
