Updating 0177 with next steps

--- a/0177-2023-11-27.md
+++ b/0177-2023-11-27.md
@@ -201,6 +201,15 @@ make user_project_wrapper
 There are slew *and* fanout warnings in this one. Still, it completed.
 
 
+# Next steps
+
+*   Run pre-check
+*   Try doing a submission to Efabless
+*   Copy tests from old solo-squash-caravel; fix `LA[0]` in firmware and test runner, and adapt frame image capture from raybox-zero
+*   Try SDC file per [this](https://course.zerotoasiccourse.com/mod/lesson/view.php?id=442&pageid=736) (at the bottom)
+*   Consider top-level timing check per [this](https://course.zerotoasiccourse.com/mod/lesson/view.php?id=442&pageid=745).
+
+
 # Stuff to try out using solo_squash design
 
 *   Compare solo_squash_caravel.v to TT03p5 wrapper
