--- a/0180-2023-12-01.md
+++ b/0180-2023-12-01.md
@@ -8,3 +8,26 @@
 
 *   Added `raybox-zero/test` -- VERY basic Verilog TBs for now.
 *   Changed rcp (reciprocal) implementation to go via a simple FSM wrapper. This has improved the timing enough to get a successful harden at a clock period of 44ns (~22.72MHz). We can probably go further by fixing up the shmul (shared multiplier) too.
+
+# Disabling FPGA hardware multipliers and other inferred DSP blocks
+
+Per [this](https://electronics.stackexchange.com/a/363922), in Quartus Prime we can:
+
+![](i/0180-quartus-disable-dsp.png)
+
+1.  Click the edit pencil next to the project name in the toolbar
+2.  Select 'Compiler Settings'
+3.  Click 'Advanced Settings (Synthesis)...'
+4.  Scroll down to 'DSP Block Balancing'
+5.  Change the option from 'Auto' to 'Logic Elements'
+
+...and this appears to disable the embedded multipliers, at the cost of a bit more logic:
+
+![](i/0180-no-dsp-multipliers.png)
+
+After making this change, I tried to push the design too far to see if I could get it to fail on the FPGA:
+*   Increased clock from 25MHz to 32.5MHz (+30%)
+*   Increased fixed-point precision from Q11.11 to Q15.15
+*   Removed wait states from wall_tracer FSM
+
+...but despite timing warnings that it couldn't run above about 20MHz, I still couldn't get it to fail on my FPGA.
